2006-04-04  Andy Wingo  <wingo@pobox.com>

	* ext/theora/theoradec.c (theora_handle_data_packet): This value
	is often negative -- make it signed so as not to wrap around.
	Fixes segfaults introduced on 9 March.

2006-04-03  Wim Taymans  <wim@fluendo.com>

	* ext/theora/gsttheoradec.h:
	* ext/theora/theoradec.c: (theora_dec_src_event):
	Don't try to store a gdouble in a gboolean.
	Small cleanups.

2006-04-03  Michael Smith  <msmith@fluendo.com>

	* ext/ogg/gstoggmux.c: (gst_ogg_mux_queue_pads):
	  Oggmux sucks.
	  Make it suck slightly less by writing out the final page.
	  Still can't encode a vorbis-in-ogg file correctly, though.

2006-04-03  Andy Wingo  <wingo@pobox.com>

	* ext/theora/theoraparse.c (theora_parse_drain_queue): Um, remove
	a g_print.

	* ext/theora/theora.c (plugin_init): Register theoraparse.

	* ext/theora/gsttheoraparse.h: 
	* ext/theora/theoraparse.c: New files implementing a theora
	parser. Now we can properly remux ogg/theora+vorbis, yay.

	* ext/vorbis/vorbisparse.c: Add some docs and a copyright.

2006-04-01  Thomas Vander Stichele  <thomas at apestaart dot org>

	* gst/audiotestsrc/gstaudiotestsrc.c:
	  Fixed the sample pipeline (see #323798)

2006-04-01  Thomas Vander Stichele  <thomas at apestaart dot org>

	* configure.ac:
	* win32/common/config.h:
	* win32/common/config.h.in:
	  use AS_VERSION and AS_NANO
	  more cleanups

2006-03-31  Andy Wingo  <wingo@pobox.com>

	* ext/vorbis/vorbisparse.c (vorbis_parse_sink_event): Fix
	uninitialized variable return that would happen.
	
	* ext/vorbis/vorbisparse.c (vorbis_parse_drain_queue): Fix
	uninitialized variable return that would never happen.

	* ext/vorbis/vorbisparse.c (gst_vorbis_parse_init) 
	(vorbis_parse_sink_event): Add an event function to flush our
	state on a seek, and to drain buffers on a premature EOS.
	(vorbis_parse_push_headers, vorbis_parse_clear_queue) 
	(vorbis_parse_push_buffer, vorbis_parse_drain_queue_prematurely) 
	(vorbis_parse_chain, vorbis_parse_queue_buffer) 