@@ -1,5 +1,9 @@
 2006-04-04  Andy Wingo  <wingo@pobox.com>
 
+	* gst/videorate/gstvideorate.c (gst_video_rate_flush_prev):
+	Properly handle the case where you get EOS before any buffers are
+	received. Use gst_buffer_make_metadata_writable where appropriate.
+
 	* ext/theora/theoradec.c (theora_handle_data_packet): This value
 	is often negative -- make it signed so as not to wrap around.
 	Fixes segfaults introduced on 9 March.
